feat(UPDATE): include user update and languages saving
